# SourceCodeBayesianOptimiser

./: BO_lengthscale_POC.py  POCBOtorch.py  POCexperiment3.py  POCplayground.py  README.md  benchmark_func_driver.py  bo_results.txt  compute_model_embeddings.py  data_processing_experiment_1.py  dataprocessing.py  dev.py  dkl_playground.py  experiment3.py  experiment4.py  kernel_runner.py  process_experiment_1_data.py  pyproject.toml  run_experiment_1.py  run_experiment_2.py  running_script_parser.py  source_code_playground.py  source_code_runner.py  success_script.json  success_script_new.json  test.py  test_discrete_search.py
MATLABcodes/: plot_beale_optimization.m  plot_rastrigin_optimization.m  plot_sphere_optimization.m
assets_for_reading/: getting_started.md
data/: optimization_data.csv
data/db/: source_code_crud.py
data/source_codes/: SVM_source_code.py  hyperparameterSpace.py  source_code.py  source_code_builder.py  temporary_SVM_source_code.py
src/: base.py  main_agregator.py
src/Similarities/: __init__.py  base.py  cosine.py
src/acquisition/: EI.py  PI.py
src/bo_optimiser/: bo_optimiser.py  objective_function_extractor.py
src/claude/: claude.py
src/data/: data_models.py  source_code_generator.py  source_code_optimiser.py  source_code_validator.py
src/embeddings/: __init__.py  model_embedder.py  source_code_dataset_embedders.py  source_code_embedders.py  source_code_parser.py
src/kernels/: RBF.py  SquaredExponential.py
src/middleware/: __init__.py  component_extractor.py  (+1 more)
test/: test_PI_GP_RBF_optimiser.py  test_bayesian_optimisation.py
(+183 files in other folders)
