[tool.poetry]
name = "4yp"
version = "0.1.0"
description = "an optimiser that can read source code and return the most suited surrogate model"
authors = ["Zhining Li <zhiningli.dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.14.1"

[tool.poetry.dev-dependencies]
numpy = "^2.1.2"
pytest = "^8.3.3"
torch = "^2.0"
gpytorch = "1.13"
botorch = "0.12"
openml = "0.15"
pymongo = "4.10.1"

[tool.pytest.ini_options]
pythonpath = [""]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
